Share link auth form added
